--- a/PetShopApp/Properties/Resources.resx
+++ b/PetShopApp/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="admin_wallpaper" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\admin_wallpaper.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Ashik" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Ashik.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Bengal" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Bengal.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
